remove file downloads field
